--- a/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/_Layout.cshtml
@@ -144,7 +144,7 @@
                                 <a href="#" class="close-block-search"><span class="fa fa-times"></span></a>
                                 <div class="form-content search-box results-search is-woocommerce">
                                     <div class="inner">
-                                        <input autocomplete="off" type="text" class="searchfield txt-livesearch input" name="keyword" placeholder="có dấu hoặc không dấu đều được...">
+                                        <input autocomplete="off" type="text" class="searchfield txt-livesearch input" name="keyword" placeholder="Tìm kiếm sản phẩm">
                                     </div>
                                     <div class="category">
                                         <select name='category' class='category-search-option' tabindex="1">
