--- a/16_Shop_MultiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
+++ b/16_Shop_MultiProduct/Views/Shared/article/_MenuAndAdsPartial.cshtml
@@ -18,7 +18,7 @@
             <span class="text">Sidebar</span>
             <a href="#" class="close-block-sidebar"><i class="fa fa-times" aria-hidden="true"></i></a>
         </div>
-        <div class="widget widget_categories">
+        <div class="widget woocommerce widget_product_brand  widget_product_categories opened">
             <h2 class="widgettitle">Danh mục<span class="arrow"></span></h2>
             <ul>
                 @foreach (var item in categoryList)
