--- a/16_Shop_MultiProduct/theme/style.red.css
+++ b/16_Shop_MultiProduct/theme/style.red.css
@@ -42,3 +42,6 @@ body{
     background-color: #d11222;    
     border: 2px solid #d11222;
 }
+.box-header-nav .main-menu .sub-menu {    
+    color: #d11222;
+}
