--- a/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
+++ b/16_Shop_MultiProduct/Views/Warranty/Index.cshtml
@@ -1,10 +1,17 @@
 ﻿@{
+    ViewBag.title = "Đăng ký bảo hành điện tử";
     AnperoFrontend.WebService.Webconfig commonInfo = new AnperoFrontend.WebService.Webconfig();
     if (ViewData["commonInfo"] != null)
     {
         commonInfo = (AnperoFrontend.WebService.Webconfig)ViewData["commonInfo"];
     }
     string currentUrl = Request.Url.Scheme + "://" + Request.Url.Authority + Request.ApplicationPath.TrimEnd('/');
+}
+@section health{
+    <meta property="og:description" content="Đăng ký bảo hành điện tử thương hiệu Jaki">
+    <meta property="og:title" content="Đăng ký bảo hành điện tử thương hiệu Jaki">
+    <meta name="description" content="Đăng ký bảo hành điện tử thương hiệu Jaki">
+    <meta name="keywords" content="Đăng ký bảo hành điện tử,Jaki">
 }
 <div class="container">
     <div class="row">
@@ -90,14 +97,14 @@
 </div>
 <style>
     .sweet-alert .sa-icon {
-    width: 80px;
-    height: 80px;
-    border: 4px solid gray;
-    border-radius: 50%;
-    margin: 41px auto!important;
-    position: relative;
-    box-sizing: content-box;
-}
+        width: 80px;
+        height: 80px;
+        border: 4px solid gray;
+        border-radius: 50%;
+        margin: 41px auto !important;
+        position: relative;
+        box-sizing: content-box;
+    }
 </style>
 @section scripts{
     <link href="https://anpero.com/assets/global/plugins/bootstrap-sweetalert/sweetalert.css" rel="stylesheet" />
